--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ems_thymeleaf?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+github.client.id=541bf8d226524d44930a
+github.client.secret=4adfccf4663a6dd2cbb644d45226288ea0cd0214
+github.redirect.uri=http://localhost:8887/callback
