发布问题功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=root
 github.client.id=541bf8d226524d44930a
 github.client.secret=4adfccf4663a6dd2cbb644d45226288ea0cd0214
 github.redirect.uri=http://localhost:8887/callback
+
+mybatis.type-aliases-package=com.isee.community.model
+mybatis.mapper-locations=classpath:mapper/*.xml
