--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <version>1.2.75</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
 
     </dependencies>
 
