--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ github.redirect.uri=http://localhost:8887/callback
 mybatis.type-aliases-package=com.isee.community.model
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
