富文本框和上传图片

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,7 @@ mybatis.type-aliases-package=com.isee.community.model
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
-
+aliyun.oss.file.endpoint=oss-cn-hangzhou.aliyuncs.com
+aliyun.oss.file.keyid=LTAI4GAi7yK6g7TBugjVojrk
+aliyun.oss.file.keysecret=fOnrJwJamVdxdJiJavyp0ClarfXfDl
+aliyun.oss.file.bucketname=edu-wyf
