--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
             <version>3.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.10.2</version>
+        </dependency>
+
 
 
     </dependencies>
