--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,11 @@ aliyun.oss.file.endpoint=oss-cn-hangzhou.aliyuncs.com
 aliyun.oss.file.keyid=LTAI4GAi7yK6g7TBugjVojrk
 aliyun.oss.file.keysecret=fOnrJwJamVdxdJiJavyp0ClarfXfDl
 aliyun.oss.file.bucketname=edu-wyf
+
+logging.file=logs/community.log
+logging.level.root=info
+logging.level.com.isee.community.mapper=debug
+#\u4E00\u4E2A\u6587\u4EF6\u6700\u591A200MB\u8D85\u51FA\u5219\u6309\u547D\u540D\u89C4\u5219\u521B\u5EFA\u65B0\u7684\u65E5\u5FD7\u6587\u4EF6
+logging.file.max-size=200MB
+#\u4FDD\u5B5830\u5929
+logging.file.max-history=30
