add login method

--- a/pom.xml
+++ b/pom.xml
@@ -119,10 +119,10 @@
 <!--                </configuration>-->
 <!--            </plugin>-->
 
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--            </plugin>-->
             <!-- mybatis-generator自动生成代码插件 -->
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
