添加点赞功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,4 @@ logging.level.com.isee.community.mapper=debug
 logging.file.max-size=200MB
 #\u4FDD\u5B5830\u5929
 logging.file.max-history=30
+spring.thymeleaf.cache=false
