--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ logging.file.max-size=200MB
 #\u4FDD\u5B5830\u5929
 logging.file.max-history=30
 spring.thymeleaf.cache=false
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
